# AI4Good_2025

./: .gitignore  README.md  REMOVE_LARGE_FILES.md
backend/: data_gen.py  lookup_tables.py  main.py  pyproject.toml  requirements.txt  ruff.toml  schemas.py  sk.py
backend/tools/: library.py
frontend/: .gitignore  DASHBOARD_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/zipcodes/: README.md
frontend/src/: App.css  App.tsx  vite-env.d.ts
frontend/src/components/AutocompleteInput/: AutocompleteInput.css  AutocompleteInput.tsx
frontend/src/components/Chat/: ChatBox.css  ChatBox.tsx
frontend/src/components/Comparison/: ComparisonPanel.css  (+5 more)
frontend/src/services/: api.ts
frontend/src/types/: google-maps.d.ts  index.ts
frontend/src/utils/: adapters.ts  fdotApi.ts  geocode.ts  geojsonBoundaries.ts  googleDdsBoundaries.ts  localAutocomplete.ts  scoreColors.ts
testing/: eda.ipynb  etl.ipynb  ml.ipynb  pyproject.toml
testing/data/: HAI-Lookup-Table.csv  HAI-Partial-Outputs.csv  HAI-Partial-Outputs.json  HAI-Reference-Table.csv  JAX-CHAS-CB.csv  JAX-CHAS-CB.csv:Zone.Identifier  JAX-CHAS-RO.csv  JAX-CHAS-RO.csv:Zone.Identifier  JAX-CensusHouseholdIncome.csv  JAX-CensusHousing.csv  JAX-CensusTransport.csv  JAX-CensusTransport.csv:Zone.Identifier  JAX-Demo.csv:Zone.Identifier  JAX-Edu.csv  JAX-Edu.csv:Zone.Identifier  JAX-Family.csv  JAX-Family.csv:Zone.Identifier  JAX-NHPD.csv  JAX-NHPD.csv:Zone.Identifier  JAX-Owner-Features.csv  JAX-Renter-Features.csv  MasterTable  MasterTable.csv  name_desc_map.json
(+28 files in other folders)
